Finishes lab2